--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.mccourse.eds_sword": "Sword of Lightning"
+  "item.mccourse.eds_sword": "Sword of Lightning",
+  "item.mccourse.lightning_ingot": "Lightning Ingot"
 }
