--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.mccourse.eds_sword": "Sword of Lightning",
-  "item.mccourse.lightning_ingot": "Lightning Ingot"
+  "item.mccourse.lightning_ingot": "Lightning Ingot",
+  "item.mccourse.mushroom_block": "Mushroom BLock"
 }
